--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "gh-pages": "^6.1.1"
-  }
+  },
+  "homepage": "https://acowe.github.io/cowe-site"
 }
