--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
     "@babel/plugin-transform-private-property-in-object": "^7.23.4",
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://acowe.github.io/cowe-site"
+  "homepage": "https://acowe.github.io/portfolio"
 }
